-------------------------------------------------------------------------------
Changes in version 1.15

- Added a SpamAssassin scanning plugin.

- Optimized pop3front-maildir to avoid stat'ing each message twice, and
  to use sizes recorded in the filename to avoid stat'ing entirely.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.12

- Fixed problem with overwriting existing session data items.

- Fixed several problems with handling of databytes in rules.

- Fixed crash in plugin cvm-validate when the lookup secret was unset.

- pop3front-auth now supports a no-argument variant on the AUTH command,
  used by KMail to test for authentication modes, and documented in
  http://www.tools.ietf.org/html/draft-myers-sasl-pop3-05
  Thanks Bernhard Graf for the initial patch

- pop3front-auth and -maildir now support the CAPA command.
  Thanks Bernhard Graf for the initial patch

- Made imapfront-auth more compatible with Courier IMAP by adding extra
  bits to the CAPABILITY command.  Thanks Bernhard Graf.

- plugin-cvm-validate handles modules that provide an "out of scope"
  fact by passing to the next plugin.

- Fixed handling of addresses without a domain in @file rules.
  Thanks Jorge Valdes

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.11

- Fixed the main mailfront program to clean up temporary files properly.

- Modified the SMTP protocol module to export the SASL authentication
  information internally.

- Modified the check-fqdn plugin to append $DEFAULTHOST and
  $DEFAULTDOMAIN to addresses if necessary.

- Added separate connect and send timeouts and a maximum message size to